# gaussian-opacity-fields

./: .gitignore  README.md  evaluate_dtu_mesh.py  extract_mesh.py  extract_mesh_tsdf.py  mesh_viewer.py  render.py  requirements.txt  train.py
arguments/: __init__.py
dtu_eval/: eval.py
gaussian_renderer/: __init__.py
scene/: appearance_network.py  cameras.py  dataset_readers.py  gaussian_model.py
scripts/: fused_ply.py  run_dtu.py  run_mipnerf360.py  run_nerf_synthetic.py  run_tnt.py  show_dtu.py  show_mipnerf360.py  show_nerfsynthetic.py  show_tnt.py
submodules/diff-gaussian-rasterization/: ext.cpp  rasterize_points.cu  rasterize_points.h  setup.py
submodules/diff-gaussian-rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
submodules/tetra-triangulation/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pytest.ini  setup.py
submodules/tetra-triangulation/cmake/: FindCUDA.cmake  FindTorch.cmake
submodules/tetra-triangulation/src/: py_binding.cpp  triangulation.cpp  triangulation.h
submodules/tetra-triangulation/src/utils/: exception.h
submodules/tetra-triangulation/tests/: test_triangulation.py
submodules/tetra-triangulation/tetranerf/utils/extension/: __init__.py  __init__.pyi
utils/: camera_utils.py  depth_utils.py  graphics_utils.py  tetmesh.py  vis_utils.py
